@@ -1,4 +1,8 @@
 CVS code -
+General
+	- Changed #ifdefs to check for both DISABLE_TABCOMP and
+	  NANO_SMALL, makes tiny option leave out tab completion, which
+	  shoudl be left out in that circumstance.  Saves at least 5k.
 - configure.in:
 	- Fix for _use_keypad check breaking slang support (Christian
 	  Weisgerber).
